# rdsframe

./: .gitattributes  .gitignore  AUDITORIA_TECNICA.md  BENCHMARKS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml  release.yml
benchmarks/: bench.py  benchmark_cython_skip.py
src/rdsframe/: __init__.py  _audit.py  _core.py  _cython_core.c  _cython_core.pyi  _cython_core.pyx  _dataset.py  _parquet.py  _scan.py  _write.py  api.py  cli.py
tests/: conftest.py  test_api.py  test_arrow_public.py  test_audit.py  test_catalog_selection.py  test_cli.py  test_conversion_policies.py  test_corrupt_inputs.py  test_dataset.py  test_encoding_and_native_format.py  test_lazy_inspection.py  test_r450_golden_files.py  test_rdata.py  test_staging.py  test_string_batching.py  test_structural_skip.py  test_write.py
tests/data/: gen_fixtures.R
tests/data/r450/: altrep_compact_intseq.rds  altrep_compact_realseq.rds  altrep_deferred_string.rds  altrep_intseq_step.rds  altrep_sorted_int_wrapper.rds  altrep_sorted_real_wrapper.rds  altrep_sorted_string_wrapper.rds  closure_function.rds  df_character_rownames.rds  df_default_rownames.rds  df_difftime_hours.rds  df_native_format.rds  df_ordered_factor.rds  df_posixlt_column.rds  df_version2.rds  df_with_altrep_columns.rds  environment_ns_parent.rds  environment_shared_ref.rds  environment_simple.rds  formula_object.rds  language_call.rds  nested_general_object.rds  posixlt_standalone.rds  s4_person.rds  s4_with_dataframe.rds  workspace_ascii.RData  workspace_mixed.RData  workspace_plain.RData  workspace_two_frames.RData  workspace_v2.RData  workspace_xz.RData
tools/: wheel_smoke.py
