[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdsframe"
version = "0.4.0b3.dev0"
description = "Fast, memory-conscious reader for RDS data.frames"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Miguel Antonio Manay López" }]
keywords = ["rds", "rdata", "pandas", "dataframe", "r", "parquet"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
]

[project.optional-dependencies]
arrow = ["pyarrow>=12"]
parquet = ["pyarrow>=12"]
duckdb = ["duckdb>=1.0", "pyarrow>=12"]
polars = ["polars>=1.0", "pyarrow>=12"]
zstd = ["zstandard>=0.16"]
dev = [
  "build>=1.2",
  "cython>=3.0",
  "hypothesis>=6.100",
  "mypy>=1.10",
  "pandas-stubs>=2.2",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "twine>=5",
]

[project.urls]
Homepage = "https://github.com/mmanaylopez/rdsframe"
Repository = "https://github.com/mmanaylopez/rdsframe"
Changelog = "https://github.com/mmanaylopez/rdsframe/blob/main/CHANGELOG.md"
Issues = "https://github.com/mmanaylopez/rdsframe/issues"

[project.scripts]
rdsframe = "rdsframe.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rdsframe = ["py.typed", "*.pyi"]

[tool.setuptools.exclude-package-data]
rdsframe = ["*.c", "*.pyx"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
# 32-bit targets are skipped because NumPy/pandas no longer ship wheels for
# them, so the built wheel cannot even install its dependencies for testing.
skip = "*-musllinux_* *_i686 *-win32"
# A wheel without the compiled scanner must never ship as a binary wheel;
# platforms outside this matrix fall back to the sdist, where the build is
# optional and the pure-Python path takes over. The smoke script goes beyond
# asserting the extension imports: it reads a synthetic RDS through the
# compiled scanner and requires identical results from the pure-Python
# fallback in a RDSFRAME_DISABLE_CYTHON=1 child process.
test-command = 'python {project}/tools/wheel_smoke.py'

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -ra"
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["fuzz: bounded property tests over malformed serialized input"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["rdsframe"]
mypy_path = "src"
